<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Conversor">

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="298dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConvertir2"
        app:layout_constraintVertical_bias="0.096" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="312dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@color/purple_500"
        android:backgroundTint="@color/design_default_color_primary"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        android:text="Euros y Libras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConvertir" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="312dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@color/design_default_color_error"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        android:text="Soles y dolares"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="200dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1">

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:checked="true"
            android:text="@string/Dólares" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/Soles" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="200dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2">

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:checked="true"
            android:text="@string/Euro" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/Libras" />
    </RadioGroup>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="313dp"
        android:layout_height="41dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_launcher_background"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        android:text="Rupias y Reales"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConvertir1" />

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="200dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3">

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:checked="true"
            android:text="@string/Rupia" />

        <RadioButton
            android:id="@+id/radio5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/Real" />
    </RadioGroup>

    <Button
        android:id="@+id/btnConvertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="miClicManejador"
        android:text="@string/Convertir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <Button
        android:id="@+id/btnConvertir1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="miClicManejador1"
        android:text="@string/Convertir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

    <Button
        android:id="@+id/btnConvertir2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="miClicManejador2"
        android:text="@string/Convertir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>